rudy-db/src/dwarf/resolution/snapshots/std_type_detection-2.snap
---
source: rudy-db/src/dwarf/resolution/types.rs
expression: ty
---
Std(
    Vec(
        VecLayout {
            length_offset: 16,
            data_ptr_offset: 8,
            inner_type: Primitive(
                Int(
                    IntLayout {
                        size: 4,
                    },
                ),
            ),
        },
    ),
)
