rudy-db/src/dwarf/resolution/snapshots/std_type_detection-3.snap
---
source: rust-debuginfo/src/dwarf/resolution/types.rs
expression: ty
snapshot_kind: text
---
Std(
    Map(
        MapDef {
            key_type: Std(
                String(
                    StringDef(
                        VecDef {
                            length_offset: 16,
                            data_ptr_offset: 8,
                            inner_type: Primitive(
                                UnsignedInt(
                                    UnsignedIntDef {
                                        size: 1,
                                    },
                                ),
                            ),
                        },
                    ),
                ),
            ),
            value_type: Primitive(
                Int(
                    IntDef {
                        size: 4,
                    },
                ),
            ),
            variant: HashMap {
                bucket_mask_offset: 8,
                ctrl_offset: 0,
                items_offset: 24,
                pair_size: 32,
                key_offset: 0,
                value_offset: 24,
            },
        },
    ),
)
