rudy-db/src/dwarf/resolution/snapshots/std_type_detection.snap
---
source: rust-debuginfo/src/dwarf/resolution/types.rs
expression: ty
snapshot_kind: text
---
Std(
    String(
        StringDef(
            VecDef {
                length_offset: 16,
                data_ptr_offset: 8,
                inner_type: Primitive(
                    UnsignedInt(
                        UnsignedIntDef {
                            size: 1,
                        },
                    ),
                ),
            },
        ),
    ),
)
